--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,21 +6,27 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ./"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "bootstrap-icons": "^1.11.3",
+    "next": "14.2.3",
+    "postcss": "^8.4.38",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.3"
+    "socket.io-client": "^4.7.5",
+    "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@webpixels/css": "^1.2.6",
+    "bootstrap": "^5.2.3",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3"
+    "eslint-config-next": "14.2.3",
+    "sass": "^1.77.4",
+    "typescript": "^5"
   }
 }
