--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.19",
     "bootstrap-icons": "^1.11.3",
-    "next": "14.2.3",
+    "next": "^14.2.3",
     "postcss": "^8.4.38",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "socket.io-client": "^4.7.5",
     "tailwindcss": "^3.4.4"
   },
