--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.7",
     "bootstrap-icons": "^1.11.3",
     "next": "^14.2.3",
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "socket.io-client": "^4.7.5",
+    "socket.io-client": "^4.8.0",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
