--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "next": "^14.2.3"
+    "next": "^14.2.3",
+    "react-icons": "^4.8.0"
   }
 }
