--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start-frontend": "next dev",
-    "start-backend": "cd ../backend && python src/app.py",
+    "start-backend": "cd ../backend && python src/app.py",  
     "dev": "concurrently \"npm run start-frontend\" \"npm run start-backend\"",
-    "build": "next build",  
-    "start": "next start"  
+    "build": "next build"
   },
   "dependencies": {
     "concurrently": "^6.0.0",
@@ -14,6 +13,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "next": "^14.2.3",
-    "react-icons": "^4.8.0"
+    "tailwindcss": "^3.4.4", 
+    "autoprefixer": "^10.4.19", 
+    "postcss": "^8.4.38"
   }
 }
