--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "next": "^14.2.3",
     "tailwindcss": "^3.4.4", 
     "autoprefixer": "^10.4.19", 
-    "postcss": "^8.4.38"
+    "postcss": "^8.4.38",
+    "react-icons": "^4.0.0" 
   }
 }
