--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.4.4", 
     "autoprefixer": "^10.4.19", 
     "postcss": "^8.4.38",
-    "react-icons": "^4.0.0" 
+    "react-icons": "^4.0.0" ,
+    "bootstrap-icons": "^1.11.1"
   }
 }
